--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "file-system": "^2.2.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
